--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,16 @@
+
 body{
-    margin-bottom: 200px;
+    
     background-color: #e8ecff;
-     
-   
+    display: grid;
+    margin: 0 auto;   
+    max-width: 1920px;
+    max-height: 1080px;
+    min-width: 1024px;
+    min-height: 768px;
+    margin-bottom: 200px;    
 }
+
 
 a {
     margin: 5px;
@@ -14,19 +21,36 @@ h1 {
     font-size: 72px; 
     font-family: Didot, serif;
     border-style: double;
+    border-width: thick;
     width: 700px;
     margin: 0 auto;
     margin-top: 30px;
     background-color:white;
+    height: 95px;
+    transition-duration: 1000ms;
 } 
 
+h1:hover {
+    width: 1200px;
+    letter-spacing: 30px;
+}
+
+
+
 nav{
-    margin-top: 20px;
     text-align: center;
     font-size: 20px;
-    margin-bottom: 30px;
     font-family: Palatino, URW Palladio L, serif;
+    transition-duration: 500ms;
 }
+nav:hover {
+    letter-spacing: 5px;
+    .nav-divider:nth-child(even) {
+        width: 5px;
+        height: 5px;
+    }
+}
+
 .nav-divider{
     background: black;
     width: 10px;
@@ -34,6 +58,7 @@ nav{
     border-radius: 50%;
     display: inline-flex;
     margin: 0 auto;
+    transition-duration: 1000ms;
 }
 
 h2{
@@ -47,10 +72,34 @@ h3 {
 
 }
 
+.hobby-photos {
+    display: inline-flex;
+    justify-content: center;
+}
+.about-main-image {
+    width: 40%;
+    height: auto;
+    margin: 0 auto;
+}
+.cupcake-image {
+    width: 33%;
+    height: auto;
+    padding: 10px;
+}
+.vase-image {
+    width: 28%;
+    height: auto;
+    padding: 10px;
+}
+.lighthouse-image {
+    width: 28%;
+    height: auto;
+    padding: 10px;
+}
 .homepage-image{
     display: block;
     width: 25%;
-    height: 25%;
+    height: auto;
     margin: 0 auto;
     
     
@@ -59,8 +108,7 @@ h3 {
 section {
     display: inline-flex;
     margin-top: 30px;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin: 0 auto;
 }
 
 div{
@@ -68,21 +116,40 @@ div{
     margin-right: 20px;
 }
 
+.contact-page-text {
+    font-size: 22px;
+
+}
+
+form {
+    text-align: center; 
+    font-size: 25px;
+    margin-top: 50px;
+}
+.messagebox-heading {
+    font-size: 25px;
+    text-align: center;
+}
+.message-box {
+    width: 315px;
+    height: 150px;
+}
+
 .portfolio-intro {
     width: 800px;
     text-align: center;
 }
 .gallery-image {
-    display: block;
-    width: 25%;
-    height: 25%;
+    display: flex;
+    max-width:25%;
+    height: auto;
     margin: 0 auto;
     border-style: solid;
 }
 .zoo-image {
     display: block;
-    width: 25%;
-    height: 25%;
+    max-width: 25%;
+    height: auto;
     margin: 0 auto;
     border-style: solid; 
     padding: 5px;   
@@ -90,8 +157,8 @@ div{
 
 .grocery-image {
     display: block;
-    width: 30%;
-    height: 30%;
+    max-width: 30%;
+    height: auto;
     margin: 0 auto;
     border-style: solid; 
     padding: 5px;
@@ -106,5 +173,17 @@ p{
     font-family: Palatino, URW Palladio L, serif;
     text-align: justify;
     margin-top: 20px;
+}
+
+
+.thankyou-heading {
+    font-size: 40px;
+    text-align: center;
+    
+}
+.thankyou {
+    font-size: 30px;
+    text-align: center;
+    width: 700px;
 }
 
